[tool.poetry]
name = "webvpn"
version = "0.1.4"
description = "TCP over WebVPN"
authors = ["Ming Yang <ymviv@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.1"
typer = "^0.4.1"
shellingham = "^1.4.0"
sentry-sdk = "^1.5.12"
aiorun = "^2022.4.1"
dynaconf = "^3.1.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.78.0"

[tool.poetry.scripts]
webvpn = "webvpn.cmd:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
